chore: Refactor ProblemController and LanguageService